added Montserrat font

--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -62,6 +62,13 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
   src: local('Roboto Condensed Bold'), url('/fonts/roboto-condensed.bold.ttf'); 
 }
 
+@font-face {
+  font-family: 'Montserrat Extra Bold';
+  font-style: bold;
+  font-weight: 800;
+  src: local('Montserrat Extra Bold'), url('/fonts/Montserrat-ExtraBold.otf'); 
+}
+
   body {
     font-family: 'Lexend Deca', sans-serif;
     margin: auto;
@@ -87,8 +94,8 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
   }
 
   strong {
-    font-size: 16px;
-    font-family: 'Open Sans Extra Bold', sans-serif;
+    font-size: 15px;
+    font-family: 'Montserrat Extra Bold', sans-serif;
   }
 
   a {
