--- a/404.html
+++ b/404.html
@@ -51,6 +51,13 @@
   src: local('Roboto Condensed Bold'), url('/fonts/roboto-condensed.bold.ttf'); 
 }
 
+@font-face {
+  font-family: 'Montserrat Extra Bold';
+  font-style: bold;
+  font-weight: 800;
+  src: local('Montserrat Extra Bold'), url('/fonts/Montserrat-ExtraBold.otf'); 
+}
+
   body {
     font-family: 'Lexend Deca', sans-serif;
     margin: auto;
@@ -76,8 +83,8 @@
   }
 
   strong {
-    font-size: 16px;
-    font-family: 'Open Sans Extra Bold', sans-serif;
+    font-size: 15px;
+    font-family: 'Montserrat Extra Bold', sans-serif;
   }
 
   a {
