--- a/info/index.html
+++ b/info/index.html
@@ -74,6 +74,13 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
   src: local('Roboto Condensed Bold'), url('/fonts/roboto-condensed.bold.ttf'); 
 }
 
+@font-face {
+  font-family: 'Montserrat Extra Bold';
+  font-style: bold;
+  font-weight: 800;
+  src: local('Montserrat Extra Bold'), url('/fonts/Montserrat-ExtraBold.otf'); 
+}
+
   body {
     font-family: 'Lexend Deca', sans-serif;
     margin: auto;
@@ -99,8 +106,8 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
   }
 
   strong {
-    font-size: 16px;
-    font-family: 'Open Sans Extra Bold', sans-serif;
+    font-size: 15px;
+    font-family: 'Montserrat Extra Bold', sans-serif;
   }
 
   a {
