--- a/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
@@ -66,6 +66,13 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
   src: local('Roboto Condensed Bold'), url('/fonts/roboto-condensed.bold.ttf'); 
 }
 
+@font-face {
+  font-family: 'Montserrat Extra Bold';
+  font-style: bold;
+  font-weight: 800;
+  src: local('Montserrat Extra Bold'), url('/fonts/Montserrat-ExtraBold.otf'); 
+}
+
   body {
     font-family: 'Lexend Deca', sans-serif;
     margin: auto;
@@ -91,8 +98,8 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
   }
 
   strong {
-    font-size: 16px;
-    font-family: 'Open Sans Extra Bold', sans-serif;
+    font-size: 15px;
+    font-family: 'Montserrat Extra Bold', sans-serif;
   }
 
   a {
