--- a/info/index.html
+++ b/info/index.html
@@ -12,7 +12,7 @@
  Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
 If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
- Changelog In order to read about website changes, new content addiditons etc." />
+ Website RS was built using hugo and hugo bearblog." />
 <meta name="keywords" content="" />
 
 
@@ -21,7 +21,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
  Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
 If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
- Changelog In order to read about website changes, new content addiditons etc." />
+ Website RS was built using hugo and hugo bearblog." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/info/" />
 <meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/>
@@ -37,7 +37,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
  Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
 If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
- Changelog In order to read about website changes, new content addiditons etc."/>
+ Website RS was built using hugo and hugo bearblog."/>
 
 
 
@@ -46,9 +46,9 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
  Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
 If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
- Changelog In order to read about website changes, new content addiditons etc.">
+ Website RS was built using hugo and hugo bearblog.">
 
-<meta itemprop="wordCount" content="87">
+<meta itemprop="wordCount" content="72">
 <meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 
 
@@ -236,9 +236,6 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
 <p>If you want to contact me, please send an email to:</p>
 <p><code>ns |at| mahasivipassana |dot| com</code></p>
 <p>If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.</p>
-<p> </p>
-<h2 id="changelog">Changelog</h2>
-<p>In order to read about website changes, new content addiditons etc., visit <a href="https://ahtrahddis.github.io/changelog/">this link</a>.</p>
 <p> </p>
 <h2 id="website">Website</h2>
 <p><strong>RS</strong> was built using <a href="https://gohugo.io/">hugo</a> and  <a href="https://github.com/janraasch/hugo-bearblog">hugo bearblog</a>.</p>
