--- a/dharma/index.html
+++ b/dharma/index.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
 <title>dharma | Reversed Siddhartha</title>
 <meta name="title" content="dharma" />
-<meta name="description" content="Practice Meditation instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
+<meta name="description" content="Dharma Practice Meditation instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
   Mindfulness of Breath (from TMI)
   Mahasi Vipassana (Noting) (from this blog)
   Shikantaza (Zazen) (from this e-book)
@@ -18,7 +18,7 @@
 
 
 <meta property="og:title" content="dharma" />
-<meta property="og:description" content="Practice Meditation instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
+<meta property="og:description" content="Dharma Practice Meditation instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
   Mindfulness of Breath (from TMI)
   Mahasi Vipassana (Noting) (from this blog)
   Shikantaza (Zazen) (from this e-book)
@@ -35,7 +35,7 @@
 <meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
 
 <meta name="twitter:title" content="dharma"/>
-<meta name="twitter:description" content="Practice Meditation instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
+<meta name="twitter:description" content="Dharma Practice Meditation instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
   Mindfulness of Breath (from TMI)
   Mahasi Vipassana (Noting) (from this blog)
   Shikantaza (Zazen) (from this e-book)
@@ -45,14 +45,14 @@
 
 
 <meta itemprop="name" content="dharma">
-<meta itemprop="description" content="Practice Meditation instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
+<meta itemprop="description" content="Dharma Practice Meditation instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
   Mindfulness of Breath (from TMI)
   Mahasi Vipassana (Noting) (from this blog)
   Shikantaza (Zazen) (from this e-book)
   Do nothing from (from Shinzen&rsquo;s Five ways to know yourself and &ldquo;Do Nothing&rdquo; Meditation youtube video)
   Metta (Loving Kindness) from (this post)">
 
-<meta itemprop="wordCount" content="430">
+<meta itemprop="wordCount" content="431">
 <meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 
 
@@ -119,7 +119,7 @@
   }
 
   .title {
-    font-size: 23.5px;
+    font-size: 24px;
     text-decoration: none;
     border: 0;
   }
@@ -233,7 +233,8 @@
   <main>
 
 <content>
-  <h2 id="practice">Practice</h2>
+  <h1 id="dharma">Dharma</h1>
+<h2 id="practice">Practice</h2>
 <h3 id="meditation-instructions-for-beginners">Meditation instructions for beginners</h3>
 <p><a href="/downloads/mip.zip">Here</a>, you will get a compressed file that includes instructions <strong>in pdf</strong> for the following meditation techniques:</p>
 <ul>
