--- a/info/index.html
+++ b/info/index.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
 <title>info | Reversed Siddhartha</title>
 <meta name="title" content="info" />
-<meta name="description" content="Who Am I? I&rsquo;m a beginner Buddhist g{r}eek and an amateur photographer.
+<meta name="description" content="Info Who Am I? I&rsquo;m a beginner Buddhist g{r}eek and an amateur photographer.
  Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
 If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
@@ -17,7 +17,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
 
 
 <meta property="og:title" content="info" />
-<meta property="og:description" content="Who Am I? I&rsquo;m a beginner Buddhist g{r}eek and an amateur photographer.
+<meta property="og:description" content="Info Who Am I? I&rsquo;m a beginner Buddhist g{r}eek and an amateur photographer.
  Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
 If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
@@ -33,7 +33,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
 <meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
 
 <meta name="twitter:title" content="info"/>
-<meta name="twitter:description" content="Who Am I? I&rsquo;m a beginner Buddhist g{r}eek and an amateur photographer.
+<meta name="twitter:description" content="Info Who Am I? I&rsquo;m a beginner Buddhist g{r}eek and an amateur photographer.
  Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
 If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
@@ -42,13 +42,13 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
 
 
 <meta itemprop="name" content="info">
-<meta itemprop="description" content="Who Am I? I&rsquo;m a beginner Buddhist g{r}eek and an amateur photographer.
+<meta itemprop="description" content="Info Who Am I? I&rsquo;m a beginner Buddhist g{r}eek and an amateur photographer.
  Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
 If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
  Website RS was built using hugo and hugo bearblog.">
 
-<meta itemprop="wordCount" content="72">
+<meta itemprop="wordCount" content="73">
 <meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 
 
@@ -115,7 +115,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
   }
 
   .title {
-    font-size: 23.5px;
+    font-size: 24px;
     text-decoration: none;
     border: 0;
   }
@@ -229,7 +229,8 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
   <main>
 
 <content>
-  <h2 id="who-am-i">Who Am I?</h2>
+  <h1 id="info">Info</h1>
+<h2 id="who-am-i">Who Am I?</h2>
 <p>I&rsquo;m a beginner Buddhist g{r}eek and an <a href="https://vlzetko.com">amateur photographer</a>.</p>
 <p> </p>
 <h2 id="contact">Contact</h2>
