--- a/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
@@ -8,16 +8,16 @@
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
 <title>The Core Features of Pragmatic Dharma | Reversed Siddhartha</title>
 <meta name="title" content="The Core Features of Pragmatic Dharma" />
-<meta name="description" content="This is an article by Vince Horn.
+<meta name="description" content="The Core Features of Pragmatic Dharma This is an article by Vince Horn.
  Introduction Pragmatic Dharma is a contemporary approach to awakening, rooted in tradition. It pulls from the time-tested teachings and practices of the Buddhist tradition, but is simultaneously infused with a contemporary mindset that isn’t afraid to tinker with the traditional formulations.
-Pragmatic Dharma, at its core, is about asking the question: What works? If something doesn’t work, then it’s relinquished. If it works, it’s used." />
+Pragmatic Dharma, at its core, is about asking the question: What works? If something doesn’t work, then it’s relinquished." />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="The Core Features of Pragmatic Dharma" />
-<meta property="og:description" content="This is an article by Vince Horn.
+<meta property="og:description" content="The Core Features of Pragmatic Dharma This is an article by Vince Horn.
  Introduction Pragmatic Dharma is a contemporary approach to awakening, rooted in tradition. It pulls from the time-tested teachings and practices of the Buddhist tradition, but is simultaneously infused with a contemporary mindset that isn’t afraid to tinker with the traditional formulations.
-Pragmatic Dharma, at its core, is about asking the question: What works? If something doesn’t work, then it’s relinquished. If it works, it’s used." />
+Pragmatic Dharma, at its core, is about asking the question: What works? If something doesn’t work, then it’s relinquished." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/" />
 <meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/>
@@ -29,18 +29,18 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
 <meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
 
 <meta name="twitter:title" content="The Core Features of Pragmatic Dharma"/>
-<meta name="twitter:description" content="This is an article by Vince Horn.
+<meta name="twitter:description" content="The Core Features of Pragmatic Dharma This is an article by Vince Horn.
  Introduction Pragmatic Dharma is a contemporary approach to awakening, rooted in tradition. It pulls from the time-tested teachings and practices of the Buddhist tradition, but is simultaneously infused with a contemporary mindset that isn’t afraid to tinker with the traditional formulations.
-Pragmatic Dharma, at its core, is about asking the question: What works? If something doesn’t work, then it’s relinquished. If it works, it’s used."/>
+Pragmatic Dharma, at its core, is about asking the question: What works? If something doesn’t work, then it’s relinquished."/>
 
 
 
 <meta itemprop="name" content="The Core Features of Pragmatic Dharma">
-<meta itemprop="description" content="This is an article by Vince Horn.
+<meta itemprop="description" content="The Core Features of Pragmatic Dharma This is an article by Vince Horn.
  Introduction Pragmatic Dharma is a contemporary approach to awakening, rooted in tradition. It pulls from the time-tested teachings and practices of the Buddhist tradition, but is simultaneously infused with a contemporary mindset that isn’t afraid to tinker with the traditional formulations.
-Pragmatic Dharma, at its core, is about asking the question: What works? If something doesn’t work, then it’s relinquished. If it works, it’s used.">
+Pragmatic Dharma, at its core, is about asking the question: What works? If something doesn’t work, then it’s relinquished.">
 
-<meta itemprop="wordCount" content="1723">
+<meta itemprop="wordCount" content="1729">
 <meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 
 
@@ -107,7 +107,7 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
   }
 
   .title {
-    font-size: 23.5px;
+    font-size: 24px;
     text-decoration: none;
     border: 0;
   }
@@ -221,7 +221,8 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
   <main>
 
 <content>
-  <br>
+  <h1 id="the-core-features-of-pragmatic-dharma">The Core Features of Pragmatic Dharma</h1>
+<br>
 <p><em>This is <a href="https://www.pragmaticdharma.training/blog/core-features-pragmatic-dharma">an article</a> by <a href="http://www.vincehorn.space/">Vince Horn</a></em>.</p>
 <p> </p>
 <h2 id="introduction">Introduction</h2>
