--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -8,13 +8,13 @@
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
 <title>What is Pragmatic Dharma? | Reversed Siddhartha</title>
 <meta name="title" content="What is Pragmatic Dharma?" />
-<meta name="description" content="This is an article by Ron Crouch.
+<meta name="description" content="What is Pragmatic Dharma? This is an article by Ron Crouch.
 I’ve been thinking a lot about what “pragmatic dharma” is lately. This is partly because I’m trying to get my own head straight as I write about it, and partly because Jack Kornfield recently criticized it on Buddhist Geeks. Kornfield, in his usual gentle style, was mostly circumspect in his criticism, but he did say that the leaders of the pragmatic dharma movement (I’m assuming he means Kenneth Folk and Daniel Ingram) have redefined key concepts in Buddhism." />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="What is Pragmatic Dharma?" />
-<meta property="og:description" content="This is an article by Ron Crouch.
+<meta property="og:description" content="What is Pragmatic Dharma? This is an article by Ron Crouch.
 I’ve been thinking a lot about what “pragmatic dharma” is lately. This is partly because I’m trying to get my own head straight as I write about it, and partly because Jack Kornfield recently criticized it on Buddhist Geeks. Kornfield, in his usual gentle style, was mostly circumspect in his criticism, but he did say that the leaders of the pragmatic dharma movement (I’m assuming he means Kenneth Folk and Daniel Ingram) have redefined key concepts in Buddhism." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/texts/pragmatic-dharma/what-is-pragmatic-dharma/" />
@@ -27,16 +27,16 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
 <meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
 
 <meta name="twitter:title" content="What is Pragmatic Dharma?"/>
-<meta name="twitter:description" content="This is an article by Ron Crouch.
+<meta name="twitter:description" content="What is Pragmatic Dharma? This is an article by Ron Crouch.
 I’ve been thinking a lot about what “pragmatic dharma” is lately. This is partly because I’m trying to get my own head straight as I write about it, and partly because Jack Kornfield recently criticized it on Buddhist Geeks. Kornfield, in his usual gentle style, was mostly circumspect in his criticism, but he did say that the leaders of the pragmatic dharma movement (I’m assuming he means Kenneth Folk and Daniel Ingram) have redefined key concepts in Buddhism."/>
 
 
 
 <meta itemprop="name" content="What is Pragmatic Dharma?">
-<meta itemprop="description" content="This is an article by Ron Crouch.
+<meta itemprop="description" content="What is Pragmatic Dharma? This is an article by Ron Crouch.
 I’ve been thinking a lot about what “pragmatic dharma” is lately. This is partly because I’m trying to get my own head straight as I write about it, and partly because Jack Kornfield recently criticized it on Buddhist Geeks. Kornfield, in his usual gentle style, was mostly circumspect in his criticism, but he did say that the leaders of the pragmatic dharma movement (I’m assuming he means Kenneth Folk and Daniel Ingram) have redefined key concepts in Buddhism.">
 
-<meta itemprop="wordCount" content="2148">
+<meta itemprop="wordCount" content="2152">
 <meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 
 
@@ -103,7 +103,7 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
   }
 
   .title {
-    font-size: 23.5px;
+    font-size: 24px;
     text-decoration: none;
     border: 0;
   }
@@ -217,7 +217,8 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
   <main>
 
 <content>
-  <br>
+  <h1 id="what-is-pragmatic-dharma">What is Pragmatic Dharma?</h1>
+<br>
 <p><em>This is an article by <a href="https://web.archive.org/web/20190424160827/https://alohadharma.com/about/">Ron Crouch</a></em>.</p>
 <br>
 <p>I’ve been thinking a lot about what “pragmatic dharma” is lately. This is partly because I’m trying to get my own head straight as I write about it, and partly because <a href="https://www.jackkornfield.com">Jack Kornfield</a> recently criticized it on <a href="http://podbay.fm/show/211752923/e/1442707200?autostart=1">Buddhist Geeks</a>.
