--- a/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
@@ -56,14 +56,16 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
   font-family: 'Lexend Deca';
   font-style: normal;
   font-weight: 400;
-  src: local('Lexend Deca'), url('/fonts/LexendDeca-Regular.ttf'); 
+  src: local('Lexend Deca'), url('/fonts/LexendDeca-Regular.ttf');
+  font-display: swap; 
 }
 
 @font-face {
   font-family: 'Roboto Condensed Bold';
   font-style: bold;
   font-weight: 700;
-  src: local('Roboto Condensed Bold'), url('/fonts/roboto-condensed.bold.ttf'); 
+  src: local('Roboto Condensed Bold'), url('/fonts/roboto-condensed.bold.ttf');
+  font-display: swap; 
 }
 
 @font-face {
@@ -71,6 +73,7 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
   font-style: bold;
   font-weight: 800;
   src: local('Montserrat Extra Bold'), url('/fonts/Montserrat-ExtraBold.otf'); 
+  font-display: swap;
 }
 
   body {
