--- a/info/index.html
+++ b/info/index.html
@@ -64,14 +64,16 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
   font-family: 'Lexend Deca';
   font-style: normal;
   font-weight: 400;
-  src: local('Lexend Deca'), url('/fonts/LexendDeca-Regular.ttf'); 
+  src: local('Lexend Deca'), url('/fonts/LexendDeca-Regular.ttf');
+  font-display: swap; 
 }
 
 @font-face {
   font-family: 'Roboto Condensed Bold';
   font-style: bold;
   font-weight: 700;
-  src: local('Roboto Condensed Bold'), url('/fonts/roboto-condensed.bold.ttf'); 
+  src: local('Roboto Condensed Bold'), url('/fonts/roboto-condensed.bold.ttf');
+  font-display: swap; 
 }
 
 @font-face {
@@ -79,6 +81,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
   font-style: bold;
   font-weight: 800;
   src: local('Montserrat Extra Bold'), url('/fonts/Montserrat-ExtraBold.otf'); 
+  font-display: swap;
 }
 
   body {
