--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -52,14 +52,16 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
   font-family: 'Lexend Deca';
   font-style: normal;
   font-weight: 400;
-  src: local('Lexend Deca'), url('/fonts/LexendDeca-Regular.ttf'); 
+  src: local('Lexend Deca'), url('/fonts/LexendDeca-Regular.ttf');
+  font-display: swap; 
 }
 
 @font-face {
   font-family: 'Roboto Condensed Bold';
   font-style: bold;
   font-weight: 700;
-  src: local('Roboto Condensed Bold'), url('/fonts/roboto-condensed.bold.ttf'); 
+  src: local('Roboto Condensed Bold'), url('/fonts/roboto-condensed.bold.ttf');
+  font-display: swap; 
 }
 
 @font-face {
@@ -67,6 +69,7 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
   font-style: bold;
   font-weight: 800;
   src: local('Montserrat Extra Bold'), url('/fonts/Montserrat-ExtraBold.otf'); 
+  font-display: swap;
 }
 
   body {
