--- a/info/index.html
+++ b/info/index.html
@@ -11,7 +11,7 @@
 <meta name="description" content="Info Who Am I? I&rsquo;m a secular Buddhist g{r}eek and an amateur photographer.
  Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
-If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
+If you found a typo or wrong formatting or any other issue, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
  Website RS was built using hugo and hugo bearblog." />
 <meta name="keywords" content="" />
 
@@ -20,7 +20,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
 <meta property="og:description" content="Info Who Am I? I&rsquo;m a secular Buddhist g{r}eek and an amateur photographer.
  Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
-If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
+If you found a typo or wrong formatting or any other issue, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
  Website RS was built using hugo and hugo bearblog." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/info/" />
@@ -36,7 +36,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
 <meta name="twitter:description" content="Info Who Am I? I&rsquo;m a secular Buddhist g{r}eek and an amateur photographer.
  Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
-If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
+If you found a typo or wrong formatting or any other issue, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
  Website RS was built using hugo and hugo bearblog."/>
 
 
@@ -45,10 +45,10 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
 <meta itemprop="description" content="Info Who Am I? I&rsquo;m a secular Buddhist g{r}eek and an amateur photographer.
  Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
-If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
+If you found a typo or wrong formatting or any other issue, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
  Website RS was built using hugo and hugo bearblog.">
 
-<meta itemprop="wordCount" content="73">
+<meta itemprop="wordCount" content="70">
 <meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 
 
@@ -239,7 +239,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
 <h2 id="contact">Contact</h2>
 <p>If you want to contact me, please send an email to:</p>
 <p><code>ns |at| mahasivipassana |dot| com</code></p>
-<p>If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.</p>
+<p>If you found a typo or wrong formatting or any other issue, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.</p>
 <p> </p>
 <h2 id="website">Website</h2>
 <p><strong>RS</strong> was built using <a href="https://gohugo.io/">hugo</a> and  <a href="https://github.com/janraasch/hugo-bearblog">hugo bearblog</a>.</p>
