--- a/404.html
+++ b/404.html
@@ -15,9 +15,8 @@
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://ahtrahddis.github.io/404.html" />
-<meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/>
-<meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
+<meta property="og:url" content="https://ahtrahddis.github.io/404.html" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
+
 
 
 
@@ -31,7 +30,6 @@
 
 <meta itemprop="name" content="404 Page not found">
 <meta itemprop="description" content="Reversed Siddhartha - a repository of dharma e-books and more..">
-
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <style>
