--- a/dharma/index.html
+++ b/dharma/index.html
@@ -25,9 +25,10 @@
   Do nothing from (from Shinzen&rsquo;s Five ways to know yourself and &ldquo;Do Nothing&rdquo; Meditation youtube video)
   Metta (Loving Kindness) (from this post)" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://ahtrahddis.github.io/dharma/" />
-<meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta property="og:url" content="https://ahtrahddis.github.io/dharma/" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="article:section" content="" />
+
 <meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
+
 
 
 
@@ -52,13 +53,8 @@
   Do nothing from (from Shinzen&rsquo;s Five ways to know yourself and &ldquo;Do Nothing&rdquo; Meditation youtube video)
   Metta (Loving Kindness) (from this post)">
 
-<meta itemprop="wordCount" content="431">
-<meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
-
-
-
+<meta itemprop="wordCount" content="430"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta itemprop="keywords" content="" />
-
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <style>
@@ -292,7 +288,7 @@
 <h3 id="are-you-interested-in-all-day-practice">Are you interested in all-day practice?</h3>
 <p>If you are interested in all-day practice, you might want to check <a href="https://ashintejaniya.org/">Sayadaw U Tejaniya</a> and <a href="https://ashintejaniya.org/teachings">these freely downloadable texts</a> with his teachings.</p>
 <p> </p>
-<h3 id="do-you-want-to-know-more-about-pragmatic-dharma">Do you want to know more about &ldquo;Pragmatic Dharma&rdquo;?</h3>
+<h3 id="do-you-want-to-know-about-pragmatic-dharma">Do you want to know about &ldquo;Pragmatic Dharma&rdquo;?</h3>
 <p>For more information about Pragmatic Dharma, please visit <a href="https://ahtrahddis.github.io/pragmatic-dharma/">this link</a>.</p>
 
 </content>
