--- a/e-book-how-to/index.html
+++ b/e-book-how-to/index.html
@@ -23,9 +23,10 @@
   the epub file is edited with calibre and finally&hellip;
   the epub file is converted to mobi and azw3 with calibre" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://ahtrahddis.github.io/e-book-how-to/" />
-<meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta property="og:url" content="https://ahtrahddis.github.io/e-book-how-to/" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="article:section" content="" />
+
 <meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
+
 
 
 
@@ -48,13 +49,8 @@
   the epub file is edited with calibre and finally&hellip;
   the epub file is converted to mobi and azw3 with calibre">
 
-<meta itemprop="wordCount" content="135">
-<meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
-
-
-
+<meta itemprop="wordCount" content="135"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta itemprop="keywords" content="" />
-
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <style>
