--- a/links/index.html
+++ b/links/index.html
@@ -29,9 +29,10 @@
   Contemplative Fitness by Kenneth Folk
    Youtube   Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://ahtrahddis.github.io/links/" />
-<meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta property="og:url" content="https://ahtrahddis.github.io/links/" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="article:section" content="" />
+
 <meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
+
 
 
 
@@ -60,13 +61,8 @@
   Contemplative Fitness by Kenneth Folk
    Youtube   Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)">
 
-<meta itemprop="wordCount" content="85">
-<meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
-
-
-
+<meta itemprop="wordCount" content="85"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta itemprop="keywords" content="" />
-
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <style>
