--- a/pragmatic-dharma/index.html
+++ b/pragmatic-dharma/index.html
@@ -23,9 +23,10 @@
  What about the &ldquo;mushroom culture&rdquo;? Here&rsquo;s a short story shared by Kenneth Folk via his twitter account:
  &hellip;..In fact, Bill (editor&rsquo;s note: Hamilton) was himself an unabashed mushroomer, and not only withheld information but advocated doing so." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://ahtrahddis.github.io/pragmatic-dharma/" />
-<meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta property="og:url" content="https://ahtrahddis.github.io/pragmatic-dharma/" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="article:section" content="" />
+
 <meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
+
 
 
 
@@ -48,13 +49,8 @@
  What about the &ldquo;mushroom culture&rdquo;? Here&rsquo;s a short story shared by Kenneth Folk via his twitter account:
  &hellip;..In fact, Bill (editor&rsquo;s note: Hamilton) was himself an unabashed mushroomer, and not only withheld information but advocated doing so.">
 
-<meta itemprop="wordCount" content="465">
-<meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
-
-
-
+<meta itemprop="wordCount" content="465"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta itemprop="keywords" content="" />
-
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <style>
