--- a/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
@@ -19,9 +19,10 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
  Introduction Pragmatic Dharma is a contemporary approach to awakening, rooted in tradition. It pulls from the time-tested teachings and practices of the Buddhist tradition, but is simultaneously infused with a contemporary mindset that isn’t afraid to tinker with the traditional formulations.
 Pragmatic Dharma, at its core, is about asking the question: What works? If something doesn’t work, then it’s relinquished." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://ahtrahddis.github.io/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/" />
-<meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta property="og:url" content="https://ahtrahddis.github.io/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="article:section" content="texts" />
+
 <meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
+
 
 
 
@@ -40,13 +41,8 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
  Introduction Pragmatic Dharma is a contemporary approach to awakening, rooted in tradition. It pulls from the time-tested teachings and practices of the Buddhist tradition, but is simultaneously infused with a contemporary mindset that isn’t afraid to tinker with the traditional formulations.
 Pragmatic Dharma, at its core, is about asking the question: What works? If something doesn’t work, then it’s relinquished.">
 
-<meta itemprop="wordCount" content="1729">
-<meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
-
-
-
+<meta itemprop="wordCount" content="1729"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta itemprop="keywords" content="" />
-
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <style>
