--- a/texts/index.html
+++ b/texts/index.html
@@ -15,9 +15,8 @@
 <meta property="og:title" content="Texts" />
 <meta property="og:description" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://ahtrahddis.github.io/texts/" />
-<meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/>
-<meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
+<meta property="og:url" content="https://ahtrahddis.github.io/texts/" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
+
 
 
 
@@ -31,7 +30,6 @@
 
 <meta itemprop="name" content="Texts">
 <meta itemprop="description" content="Reversed Siddhartha - a repository of dharma e-books and more..">
-
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <link rel="alternate" type="application/rss+xml" href="https://ahtrahddis.github.io/texts/index.xml" title="Reversed Siddhartha" />
